// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: <Button /> Next: should mount without exploding 1`] = `
<Button
  className="next"
  fn={[Function]}
  text="Next"
>
  <button
    className="jsx-2690472618 next"
    onClick={[Function]}
  >
    Next
    <JSXStyle
      css="button.jsx-2690472618{background-color:#734D84;border:none;border-radius:15px;box-shadow:4px 4px 4px #A974C2;color:#B0BF6C;font-family:\\"Kalam\\", cursive;font-size:1.5em;-webkit-letter-spacing:0.25em;-moz-letter-spacing:0.25em;-ms-letter-spacing:0.25em;letter-spacing:0.25em;margin:0.5em 0.25em 0 0.25em;outline:none;padding:0.25em;width:80%;}.reset.jsx-2690472618{padding:0.5em;width:25%;}"
      styleId="2690472618"
    />
  </button>
</Button>
`;

exports[`Component: <Button /> Reset: should mount without exploding 1`] = `
<Button
  className="reset"
  fn={[Function]}
  text="Reset"
>
  <button
    className="jsx-2690472618 reset"
    onClick={[Function]}
  >
    Reset
    <JSXStyle
      css="button.jsx-2690472618{background-color:#734D84;border:none;border-radius:15px;box-shadow:4px 4px 4px #A974C2;color:#B0BF6C;font-family:\\"Kalam\\", cursive;font-size:1.5em;-webkit-letter-spacing:0.25em;-moz-letter-spacing:0.25em;-ms-letter-spacing:0.25em;letter-spacing:0.25em;margin:0.5em 0.25em 0 0.25em;outline:none;padding:0.25em;width:80%;}.reset.jsx-2690472618{padding:0.5em;width:25%;}"
      styleId="2690472618"
    />
  </button>
</Button>
`;

exports[`Component: <Button /> Start: should mount without exploding 1`] = `
<Button
  className="start"
  fn={[Function]}
  text="Start"
>
  <button
    className="jsx-2690472618 start"
    onClick={[Function]}
  >
    Start
    <JSXStyle
      css="button.jsx-2690472618{background-color:#734D84;border:none;border-radius:15px;box-shadow:4px 4px 4px #A974C2;color:#B0BF6C;font-family:\\"Kalam\\", cursive;font-size:1.5em;-webkit-letter-spacing:0.25em;-moz-letter-spacing:0.25em;-ms-letter-spacing:0.25em;letter-spacing:0.25em;margin:0.5em 0.25em 0 0.25em;outline:none;padding:0.25em;width:80%;}.reset.jsx-2690472618{padding:0.5em;width:25%;}"
      styleId="2690472618"
    />
  </button>
</Button>
`;

exports[`Component: <Button /> Stop: should mount without exploding 1`] = `
<Button
  className="stop"
  fn={[Function]}
  text="Stop"
>
  <button
    className="jsx-2690472618 stop"
    onClick={[Function]}
  >
    Stop
    <JSXStyle
      css="button.jsx-2690472618{background-color:#734D84;border:none;border-radius:15px;box-shadow:4px 4px 4px #A974C2;color:#B0BF6C;font-family:\\"Kalam\\", cursive;font-size:1.5em;-webkit-letter-spacing:0.25em;-moz-letter-spacing:0.25em;-ms-letter-spacing:0.25em;letter-spacing:0.25em;margin:0.5em 0.25em 0 0.25em;outline:none;padding:0.25em;width:80%;}.reset.jsx-2690472618{padding:0.5em;width:25%;}"
      styleId="2690472618"
    />
  </button>
</Button>
`;
